@@ -4,6 +4,10 @@ Change History
 1.7b7 unreleased
 ----------------
 
+- Fixed a test that changed the working directory, but failed to change it
+  back to the original. This was resulting in zero test results when using
+  collective.xmltestreport. [pumazi]
+
 - Added dependencies Plone and Products.Archetypes.
   [pumazi]
 
